--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="inner">
                     <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
                     <div class="content">
-                        <h2 class="major">Magna arcu feugiat</h2>
+                        <h2 class="major">Draft Section 1</h2>
                         <p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
                         <a href="#" class="special">Learn more</a>
                     </div>
@@ -65,7 +65,7 @@
                 <div class="inner">
                     <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
                     <div class="content">
-                        <h2 class="major">Tempus adipiscing</h2>
+                        <h2 class="major">Draft Section 2</h2>
                         <p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
                         <a href="#" class="special">Learn more</a>
                     </div>
@@ -77,10 +77,44 @@
                 <div class="inner">
                     <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
                     <div class="content">
-                        <h2 class="major">Nullam dignissim</h2>
+                        <h2 class="major">Draft Section 3</h2>
                         <p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
                         <a href="#" class="special">Learn more</a>
                     </div>
+                </div>
+            </section>
+
+        <!-- Four -->
+            <section id="four" class="wrapper alt style1">
+                <div class="inner">
+                    <h2 class="major">Vitae phasellus</h2>
+                    <p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+                    <section class="features">
+                        <article>
+                            <a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+                            <h3 class="major">Sed feugiat lorem</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+                            <a href="#" class="special">Learn more</a>
+                        </article>
+                        <article>
+                            <a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
+                            <h3 class="major">Nisl placerat</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+                            <a href="#" class="special">Learn more</a>
+                        </article>
+                        <article>
+                            <a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
+                            <h3 class="major">Ante fermentum</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+                            <a href="#" class="special">Learn more</a>
+                        </article>
+                        <article>
+                            <a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
+                            <h3 class="major">Fusce consequat</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
+                            <a href="#" class="special">Learn more</a>
+                        </article>
+
                 </div>
             </section>
 
