--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
                             <a href="#" class="special">Learn more</a>
                         </article>
-
+                    </section>
+                    <ul class="actions">
+                        <li><a href="#" class="button">Browse All</a></li>
+                    </ul>
                 </div>
             </section>
 
