--- a/index.html
+++ b/index.html
@@ -87,30 +87,30 @@
         <!-- Four -->
             <section id="four" class="wrapper alt style1">
                 <div class="inner">
-                    <h2 class="major">Vitae phasellus</h2>
+                    <h2 class="major">Draft Section 4(Articles)</h2>
                     <p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
                     <section class="features">
                         <article>
                             <a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-                            <h3 class="major">Sed feugiat lorem</h3>
+                            <h3 class="major">Draft Article 1</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
                             <a href="#" class="special">Learn more</a>
                         </article>
                         <article>
                             <a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-                            <h3 class="major">Nisl placerat</h3>
+                            <h3 class="major">Draft Article 2</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
                             <a href="#" class="special">Learn more</a>
                         </article>
                         <article>
                             <a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-                            <h3 class="major">Ante fermentum</h3>
+                            <h3 class="major">Draft Article 3</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
                             <a href="#" class="special">Learn more</a>
                         </article>
                         <article>
                             <a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-                            <h3 class="major">Fusce consequat</h3>
+                            <h3 class="major">Draft Article 4</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
                             <a href="#" class="special">Learn more</a>
                         </article>
@@ -120,6 +120,8 @@
                     </ul>
                 </div>
             </section>
+
+        </section>
 
     
 </body>
