--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="inner">
                 <div class="logo"><span class="icon fa-gem"></span></div>
                 <h2>Web Development Template</h2>
-                <p>Base responsive web site template <a href="https://tec-company.com">Tec-Company.com</a></p>
+                <p>Reusable template for responsive web sites <a href="https://tec-company.com"> Tec-Company.com</a></p>
             </div>
         </section>
 
@@ -147,6 +147,25 @@
                         <li><input type="submit" value="Send Message" /></li>
                     </ul>
                 </form>
+                <ul class="contact">
+                    <li class="icon solid fa-home">
+                        Tec-Company Inc<br />
+                        1234 Somewhere Road Suite #0001<br />
+                        NorthRegion, STH 00000-0000
+                    </li>
+                    <li class="icon solid fa-phone">(000) 000-0000</li>
+                    <li class="icon solid fa-envelope"><a href="#">information@Tec-Company.tld</a></li>
+                    <li class="icon brands fa-twitter"><a href="#">x.com/Tec-Company-tld</a></li>
+                    <li class="icon brands fa-facebook-f"><a href="#">facebook.com/Tec-Company-tld</a></li>
+                    <li class="icon brands fa-instagram"><a href="#">instagram.com/Tec-Company-tld</a></li>
+                </ul>
+                <ul class="copyright">
+                    <li>&copy; Tec-Company Inc. All rights reserved.</li><li>Design: <a href="https://Tec-Company.com">Tec-Company</a></li>
+                </ul>
+            </div>
+        </section>
+
+    </div>
 
     
 </body>
