--- a/elements.html
+++ b/elements.html
@@ -34,6 +34,15 @@
                     <a href="#" class="close">Close</a>
                 </div>
             </nav>
+            
+        <!-- Wrapper -->
+            <section id="wrapper">
+                <header>
+                    <div class="inner">
+                        <h2>Elements</h2>
+                        <p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
+                    </div>
+                </header>
 
 </body>
 </html>
