--- a/elements.html
+++ b/elements.html
@@ -14,7 +14,7 @@
 
     <!-- Header -->
         <header id="header">
-            <h1><a href="index.html">Solid State</a></h1>
+            <h1><a href="index.html">PrcW10-Templ_B</a></h1>
             <nav>
                 <a href="#menu">Menu</a>
             </nav>
@@ -56,6 +56,36 @@
                                 <h4>Blockquote</h4>
                                 <blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.
                                 </blockquote>
+
+                                <h4>Preformatted</h4>
+                                <pre><code>i = 0;
+
+                                    while (!deck.isInOrder()) {
+                                      print 'Iteration ' + i;
+                                      deck.shuffle();
+                                      i++;
+                                    }
+                                    
+                                    print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
+                            </section>
+
+                            <section>
+                                <h3 class="major">Lists</h3>
+                                <div class="row">
+                                    <div class="col-6 col-12-medium">
+                                        <h4>Unordered</h4>
+                                        <ul>
+                                            <li>Dolor pulvinar etiam.</li>
+                                            <li>Sagittis adipiscing.</li>
+                                            <li>Felis enim feugiat.</li>
+                                        </ul>
+                                        <h4>Alternate</h4>
+                                        <ul class="alt">
+                                            <li>Dolor pulvinar etiam.</li>
+                                            <li>Sagittis adipiscing.</li>
+                                            <li>Felis enim feugiat.</li>
+                                        </ul>
+                                    </div>
 
 </body>
 </html>
