--- a/elements.html
+++ b/elements.html
@@ -87,5 +87,25 @@
                                         </ul>
                                     </div>
 
+                                    <div class="col-6 col-12-medium">
+                                        <h4>Ordered</h4>
+                                        <ol>
+                                            <li>Dolor pulvinar etiam.</li>
+                                            <li>Etiam vel felis viverra.</li>
+                                            <li>Felis enim feugiat.</li>
+                                            <li>Dolor pulvinar etiam.</li>
+                                            <li>Etiam vel felis lorem.</li>
+                                            <li>Felis enim et feugiat.</li>
+                                        </ol>
+                                        <h4>Icons</h4>
+                                        <ul class="icons">
+                                            <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                                            <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                                            <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                                            <li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+
 </body>
 </html>
