--- a/elements.html
+++ b/elements.html
@@ -107,5 +107,39 @@
                                     </div>
                                 </div>
 
+                                <h4>Actions</h4>
+                                <div class="row">
+                                    <div class="col-6 col-12-medium">
+                                        <ul class="actions">
+                                            <li><a href="#" class="button primary">Default</a></li>
+                                            <li><a href="#" class="button">Default</a></li>
+                                        </ul>
+                                        <ul class="actions small">
+                                            <li><a href="#" class="button primary small">Small</a></li>
+                                            <li><a href="#" class="button small">Small</a></li>
+                                        </ul>
+                                        <ul class="actions stacked">
+                                            <li><a href="#" class="button primary">Default</a></li>
+                                            <li><a href="#" class="button">Default</a></li>
+                                        </ul>
+                                        <ul class="actions stacked small">
+                                            <li><a href="#" class="button primary small">Small</a></li>
+                                            <li><a href="#" class="button small">Small</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-6 col-12-medium">
+                                        <ul class="actions stacked">
+                                            <li><a href="#" class="button primary fit">Default</a></li>
+                                            <li><a href="#" class="button fit">Default</a></li>
+                                        </ul>
+                                        <ul class="actions stacked small">
+                                            <li><a href="#" class="button primary small fit">Small</a></li>
+                                            <li><a href="#" class="button small fit">Small</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                                   
+
 </body>
 </html>
