--- a/elements.html
+++ b/elements.html
@@ -152,6 +152,19 @@
                                     </ul>
                             </section>
 
+                            <section>
+                                <h3 class="major">Table</h3>
+                                <h4>Default</h4>
+                                <div class="table-wrapper">
+                                    <table>
+                                        <thead>
+                                            <tr>
+                                                <th>Name</th>
+                                                <th>Description</th>
+                                                <th>Price</th>
+                                            </tr>
+                                        </thead>
+
                                    
 
 </body>
