alternate table added

--- a/elements.html
+++ b/elements.html
@@ -199,7 +199,16 @@
                                         </tfoot>
                                     </table>
                                 </div>
-
+                                <h4>Alternate</h4>
+                                    <div class="table-wrapper">
+                                        <table class="alt">
+                                            <thead>
+                                                <tr>
+                                                    <th>Name</th>
+                                                    <th>Description</th>
+                                                    <th>Price</th>
+                                                </tr>
+                                            </thead>
 
 
 
