table foot added

--- a/elements.html
+++ b/elements.html
@@ -199,7 +199,7 @@
                                         </tfoot>
                                     </table>
                                 </div>
-                                
+
                                 <h4>Alternate</h4>
                                     <div class="table-wrapper">
                                         <table class="alt">
@@ -237,6 +237,15 @@
                                                     <td>29.99</td>
                                                 </tr>
                                             </tbody>
+                                            <tfoot>
+                                                <tr>
+                                                    <td colspan="2"></td>
+                                                    <td>100.00</td>
+                                                </tr>
+                                            </tfoot>
+                                        </table>
+                                    </div>
+                                </section>
 
 
 
