--- a/elements.html
+++ b/elements.html
@@ -303,6 +303,32 @@
                                         <option value="1">Administration</option>
                                         <option value="1">Human Resources</option>
                                     </select>
+                                </div>
+
+                                <div class="col-4 col-12-small">
+                                    <input type="radio" id="demo-priority-low" name="demo-priority" checked>
+                                    <label for="demo-priority-low">Low Priority</label>
+                                </div>
+                                <div class="col-4 col-12-small">
+                                    <input type="radio" id="demo-priority-normal" name="demo-priority">
+                                    <label for="demo-priority-normal">Normal Priority</label>
+                                </div>
+                                <div class="col-4 col-12-small">
+                                    <input type="radio" id="demo-priority-high" name="demo-priority">
+                                    <label for="demo-priority-high">High Priority</label>
+                                </div>
+                                <div class="col-6 col-12-small">
+                                    <input type="checkbox" id="demo-copy" name="demo-copy">
+                                    <label for="demo-copy">Email me a copy</label>
+                                </div>
+                                <div class="col-6 col-12-small">
+                                    <input type="checkbox" id="demo-human" name="demo-human" checked>
+                                    <label for="demo-human">Not a robot</label>
+                                </div>
+                                <div class="col-12">
+                                    <label for="demo-message">Message</label>
+                                    <textarea name="demo-message" id="demo-message" rows="6"></textarea>
+                                </div>
 
 
 
