--- a/elements.html
+++ b/elements.html
@@ -329,6 +329,15 @@
                                     <label for="demo-message">Message</label>
                                     <textarea name="demo-message" id="demo-message" rows="6"></textarea>
                                 </div>
+                                <div class="col-12">
+                                    <ul class="actions">
+                                        <li><input type="submit" value="Send Message" class="primary" /></li>
+                                        <li><input type="reset" value="Reset" /></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </form>
+                    </section>
 
 
 
