--- a/elements.html
+++ b/elements.html
@@ -9,7 +9,7 @@
     </head>
 <body class="is-preload">
 
-<!-- Page Wrapper -->
+    <!-- Page Wrapper -->
     <div id="page-wrapper">
 
         <!-- Header -->
@@ -400,18 +400,18 @@
 
                 <ul class="contact">
                     <li class="icon solid fa-home">
-                        Untitled Inc<br />
-                        1234 Somewhere Road Suite #2894<br />
-                        Nashville, TN 00000-0000
+                        Tec-Company Inc<br />
+                        1234 Somewhere Road Suite #0001<br />
+                        NorthRegion, STH 00000-0000
                     </li>
                     <li class="icon solid fa-phone">(000) 000-0000</li>
-                    <li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-                    <li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-                    <li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-                    <li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
+                    <li class="icon solid fa-envelope"><a href="#">information@Tec-Company.tld</a></li>
+                    <li class="icon brands fa-twitter"><a href="#">x.com/Tec-Company-tld</a></li>
+                    <li class="icon brands fa-facebook-f"><a href="#">facebook.com/Tec-Company-tld</a></li>
+                    <li class="icon brands fa-instagram"><a href="#">instagram.com/Tec-Company-tld</a></li>
                 </ul>
                 <ul class="copyright">
-                    <li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                    <li>&copy; Tec-Company Inc. All rights reserved.</li><li>Design: <a href="https://Tec-Company.com">Tec-Company</a></li>
                 </ul>
             </div>
         </section>
