main content section complete

--- a/generics.html
+++ b/generics.html
@@ -75,3 +75,8 @@
                                 <a href="#" class="special">Learn more</a>
                             </article>
                         </section>
+
+                    </div>
+                </div>
+
+        </section>
