--- a/generics.html
+++ b/generics.html
@@ -15,7 +15,7 @@
 
     <!-- Header -->
         <header id="header">
-            <h1><a href="index.html">Solid State</a></h1>
+            <h1><a href="index.html">PrcW10-Templ_B</a></h1>
             <nav>
                 <a href="#menu">Menu</a>
             </nav>
@@ -107,3 +107,20 @@
                         <li><input type="submit" value="Send Message" /></li>
                     </ul>
                 </form>
+
+                <ul class="contact">
+                    <li class="icon solid fa-home">
+                        Tec-Company Inc<br />
+                        1234 Somewhere Road Suite #0001<br />
+                        NorthRegion, STH 00000-0000
+                    </li>
+                    <li class="icon solid fa-phone">(000) 000-0000</li>
+                    <li class="icon solid fa-envelope"><a href="#">information@Tec-Company.tld</a></li>
+                    <li class="icon brands fa-twitter"><a href="#">x.com/Tec-Company-tld</a></li>
+                    <li class="icon brands fa-facebook-f"><a href="#">facebook.com/Tec-Company-tld</a></li>
+                    <li class="icon brands fa-instagram"><a href="#">instagram.com/Tec-Company-tld</a></li>
+                </ul>
+                
+                <ul class="copyright">
+                    <li>&copy; Tec-Company Inc. All rights reserved.</li><li>Design: <a href="https://Tec-Company.com">Tec-Company</a></li>
+                </ul>
