generic page structure complete

--- a/generics.html
+++ b/generics.html
@@ -120,7 +120,17 @@
                     <li class="icon brands fa-facebook-f"><a href="#">facebook.com/Tec-Company-tld</a></li>
                     <li class="icon brands fa-instagram"><a href="#">instagram.com/Tec-Company-tld</a></li>
                 </ul>
-                
+
                 <ul class="copyright">
                     <li>&copy; Tec-Company Inc. All rights reserved.</li><li>Design: <a href="https://Tec-Company.com">Tec-Company</a></li>
                 </ul>
+            </div>
+        </section>
+
+    </div>
+
+    <!-- Scripts -->
+    <!-- Pending to add script links -->
+
+</body>
+</html>
