code format rev1

--- a/elements.html
+++ b/elements.html
@@ -39,7 +39,7 @@
         <section id="wrapper">
             <header>
                 <div class="inner">
-                    <h2>Elements</h2>
+                    <h2>Elements(Page3)</h2>
                     <p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
                 </div>
             </header>
@@ -50,15 +50,17 @@
 
                     <section>
                         <h3 class="major">Text</h3>
-                        <p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-                        This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-                        This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
+                        <p>This is <b>bold</b> and this is <strong>strong</strong>. 
+                        <br>This is <i>italic</i> and this is <em>emphasized</em>.
+                        <br>This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
+                        <br>This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
                         <h4>Blockquote</h4>
-                        <blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.
+                        <blockquote>"Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis".
                         </blockquote>
 
                         <h4>Preformatted</h4>
-                        <pre><code>i = 0;
+                        <pre><code>
+                            i = 0;
 
                             while (!deck.isInOrder()) {
                                 print 'Iteration ' + i;
@@ -66,7 +68,8 @@
                                 i++;
                             }
                             
-                            print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
+                            print 'It took ' + i + ' iterations to sort the deck.';
+                        </code></pre>
                     </section>
 
                     <section>
@@ -104,8 +107,11 @@
                                 <h4>Icons</h4>
                                 <ul class="icons">
                                     <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+
                                     <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+
                                     <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+
                                     <li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
                                 </ul>
                             </div>
@@ -115,30 +121,31 @@
                         <div class="row">
                             <div class="col-6 col-12-medium">
                                 <ul class="actions">
-                                    <li><a href="#" class="button primary">Default</a></li>
-                                    <li><a href="#" class="button">Default</a></li>
+                                    <li><a href="#" class="button primary">Default Action A</a></li>
+                                    <li><a href="#" class="button">Default Action A</a></li>
                                 </ul>
                                 <ul class="actions small">
-                                    <li><a href="#" class="button primary small">Small</a></li>
-                                    <li><a href="#" class="button small">Small</a></li>
+                                    <li><a href="#" class="button primary small">Small Action A</a></li>
+                                    <li><a href="#" class="button small">Small Action A</a></li>
                                 </ul>
                                 <ul class="actions stacked">
-                                    <li><a href="#" class="button primary">Default</a></li>
-                                    <li><a href="#" class="button">Default</a></li>
+                                    <li><a href="#" class="button primary">Default Action A</a></li>
+                                    <li><a href="#" class="button">Default Action A</a></li>
                                 </ul>
                                 <ul class="actions stacked small">
-                                    <li><a href="#" class="button primary small">Small</a></li>
-                                    <li><a href="#" class="button small">Small</a></li>
+                                    <li><a href="#" class="button primary small">Small Action A</a></li>
+                                    <li><a href="#" class="button small">Small Action A</a></li>
                                 </ul>
                             </div>
+
                             <div class="col-6 col-12-medium">
                                 <ul class="actions stacked">
-                                    <li><a href="#" class="button primary fit">Default</a></li>
-                                    <li><a href="#" class="button fit">Default</a></li>
+                                    <li><a href="#" class="button primary fit">Default Action B</a></li>
+                                    <li><a href="#" class="button fit">Default Action B</a></li>
                                 </ul>
                                 <ul class="actions stacked small">
-                                    <li><a href="#" class="button primary small fit">Small</a></li>
-                                    <li><a href="#" class="button small fit">Small</a></li>
+                                    <li><a href="#" class="button primary small fit">Small Action B</a></li>
+                                    <li><a href="#" class="button small fit">Small Action B</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -158,8 +165,8 @@
                     </section>
 
                     <section>
-                        <h3 class="major">Table</h3>
-                        <h4>Default</h4>
+                        <h3 class="major">Tables</h3>
+                        <h4>Table 1</h4>
                         <div class="table-wrapper">
                             <table>
                                 <thead>
@@ -205,7 +212,7 @@
                             </table>
                         </div>
 
-                        <h4>Alternate</h4>
+                        <h4>Table 2</h4>
                         <div class="table-wrapper">
                             <table class="alt">
                                 <thead>
