--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section id="banner">
             <div class="inner">
                 <div class="logo"><span class="icon fa-gem"></span></div>
-                <h2>Web Development Template</h2>
+                <h2>Web Development Template(Page1)</h2>
                 <p>Reusable template for responsive web sites <a href="https://tec-company.com"> Tec-Company.com</a></p>
             </div>
         </section>
@@ -87,30 +87,30 @@
         <!-- Four -->
             <section id="four" class="wrapper alt style1">
                 <div class="inner">
-                    <h2 class="major">Draft Section 4(Articles)</h2>
+                    <h2 class="major">Draft Section 4 - Articles Parent</h2>
                     <p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
                     <section class="features">
                         <article>
                             <a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-                            <h3 class="major">Draft Article 1</h3>
+                            <h3 class="major">Child Article 1</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
                             <a href="#" class="special">Learn more</a>
                         </article>
                         <article>
                             <a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-                            <h3 class="major">Draft Article 2</h3>
+                            <h3 class="major">Child Article 2</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
                             <a href="#" class="special">Learn more</a>
                         </article>
                         <article>
                             <a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-                            <h3 class="major">Draft Article 3</h3>
+                            <h3 class="major">Child Article 3</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
                             <a href="#" class="special">Learn more</a>
                         </article>
                         <article>
                             <a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-                            <h3 class="major">Draft Article 4</h3>
+                            <h3 class="major">Child Article 4</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
                             <a href="#" class="special">Learn more</a>
                         </article>
@@ -126,7 +126,7 @@
     <!-- Footer -->
         <section id="footer">
             <div class="inner">
-                <h2 class="major">Get in touch</h2>
+                <h2 class="major">Message Form</h2>
                 <p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
                 <form method="post" action="#">
                     <div class="fields">
